# rogilinkflex2_ros2

./: CMakeLists.txt  package.xml
config/: rogilinkflex2_config.yaml  test_config.yaml
include/rogilinkflex2/: communication_node.hpp  float_hex_converter.hpp
msg/: DeviceData.msg  PeriodicData.msg  ReadRequest.msg  WriteRequest.msg
src/: communication_node.cpp  float_hex_converter.cpp  main.cpp  test_node.cpp
